<resources>
    <string name="app_name">ADEB Driver</string>
    <string name="login">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="submit">Submit</string>
    <string name="image">Image</string>
    <string name="driving_license">Driving License</string>
    <string name="personal_id">Personal ID</string>
    <string name="health_report">Health Report</string>
    <string name="request_document_change"><u>Request document change?</u></string>
    <string name="mobile_number">Mobile Number</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">Log In</string>
    <string name="are_you_a_new_user">Are you a new user?</string>
    <string name="sign_up">Sign Up</string>
    <string name="by_clicking_here_you_agree_to_the_terms_and_conditions">By Clicking here you agree to the <u> Terms and Conditions</u></string>
    <string name="register">Register</string>
    <string name="already_a_user">Already a user?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="now">Now</string>
    <string name="day">Day</string>
    <string name="hourly">Hourly</string>
    <string name="regular">Regular</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="me">Me</string>
    <string name="payment_method">Payment Method</string>
    <string name="my_booking">My Booking</string>
    <string name="book">Book</string>
    <string name="no_data_found">No Data Found</string>
    <string name="edit_your_profile_details">Edit your profile details</string>
    <string name="my_account_panel">Please drop us a mail mentioning the panel you
    would like us to complain about. we will take an action and get back to you asap.
    </string>
    <string name="show_notificatons">Notifications</string>
    <string name="choose_your_car_and_gear_type">Choose your car and gear type?</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="luxury">Luxury</string>
    <string name="manual">Manual</string>
    <string name="automatic">Automatic</string>
    <string name="coupons">Coupons</string>
    <string name="mode_of_payment">Mode of Payment</string>
    <string name="book_now">Book Now</string>
    <string name="select_time">Select Time</string>
    <string name="pick_up">Pick Up</string>
    <string name="time">Time</string>
    <string name="continue_">Continue</string>
    <string name="favorite">Favorite</string>
    <string name="automatically">Automatically</string>
    <string name="you_will_receive_a_otp_on_the_registered_mobile_number">You will receive a OTP on the registered mobile number.</string>
    <string name="enter_the_registered_mobile_number">Enter the registered mobile number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="you_have_successfully_change_your_password_please_visit_the_login_page_to_use_this_app">You have successfully change your password.Please visit the login page to use this app</string>
    <string name="password_match_error">Passwords are not matching</string>
    <string name="password_error">Password cannot be empty</string>
    <string name="confirm_password_error">Confirm Password cannot be empty</string>
    <string name="mobile_error">Mobile Number cannot be empty</string>
    <string name="name_error">Name cannot be empty</string>
    <string name="email_empty_error">Email cannot be empty</string>
    <string name="invalid_email_error">Invalid email</string>
    <string name="logout_confirm_message">Are you sure want to logout of \nyour account?</string>
    <string name="privacy_policy_validation">Please select our terms of use policy</string>
    <string name="logout">Logout</string>
    <string name="call_driver">Call Driver</string>
    <string name="cancel_ride">Cancel Ride</string>
    <string name="dismiss">Dismiss</string>
    <string name="select_action">Select Action</string>
    <string name="select_image_from_gallery">Select image from gallery</string>
    <string name="select_image_from_camera">Select image from camera</string>
    <string name="nice_experience">Nice Experience !</string>
    <string name="rate_driver">Rate User</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="favourite_drivers">Favourite Drivers</string>
    <string name="your_favourite_drivers">Your Favourite Drivers</string>
    <string name="settings">Settings</string>
    <string name="change_your_account_settings">Change your account settings</string>
    <string name="support">Support</string>
    <string name="ready_to_help_you_24_7">Ready to help you 24*7</string>
    <string name="rate_this_app">Rate this App</string>
    <string name="rate_our_app">Rate our app</string>
    <string name="type_your_views">Type your views (Optional)</string>
    <string name="rate">Rate</string>
    <string name="save">Save</string>
    <string name="mobile">Mobile</string>
    <string name="request_otp">Request OTP</string>
    <string name="enter_new_password">Enter new Password</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="enter_the_4_digit_code_sent_to_you">Enter the 4-digit code sent to you</string>
    <string name="resend_code_in">Resend code in</string>
    <string name="verify">Verify</string>
    <string name="change_password">Change Password</string>
    <string name="ride_option">Ride Option</string>
    <string name="my_account">My Account</string>
    <string name="fee_payment">Fee payment</string>
    <string name="safety">Safety</string>
    <string name="ride_passes_and_subscriptions">Ride passes and subscriptions</string>
    <string name="all_about_adeb_services">All about ADEB services</string>
    <string name="choose_the_driver">Choose the driver</string>
    <string name="select_a_time_period">Select a time period</string>
    <string name="select_manually">Select Manually</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="title">Title</string>
    <string name="my_bookings">My Bookings</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="cash">Cash</string>
    <string name="debit_credit_card">Debit/Credit Card</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="reject">Reject</string>
    <string name="accept_request">Accept Request</string>
    <string name="unique_number_error">Unique Identification Number Should Not be empty</string>
    <string name="driving_exp_error">Driving Experience Should Not be empty</string>
    <string name="cancel_trip">Cancel Trip</string>
    <string name="cancellation_charge_will_be_deducted_from_your_account_with_respect_to_out_cancellation_policy">Cancellation charge will be deducted from your account with respect to out Cancellation Policy</string>
    <string name="cancel_request">Cancel Request ?</string>
    <string name="reached_the_pick_up_point">Reached the Pick up point</string>
    <string name="checked_text">Swipe to deactivate</string>
    <string name="unchecked_text">Swipe to activate</string>
    <string name="select">Select</string>
    <string name="license_empty_error">License Number cannot be empty</string>
    <string name="select_gear_validation">Please select car gear</string>
    <string name="front_side_image_validation">Please Add Front Side Image</string>
    <string name="back_side_image_validation">Please Add Back Side Image</string>
    <string name="user_add_pic_validation">Please add your pic</string>
    <string name="id_proof">Please select id proof</string>
    <string name="id_number_empty_error">Please enter your id number</string>
    <string name="dob_validation">Please enter your date of birth</string>
    <string name="health_report_image_validation">Please upload the health report image</string>
    <string name="ride_notified_msg">,you will be notified soon once any ride comes</string>
    <string name="title_activity_maps">Map</string>
    <string name="unique_identity_number">Unique Identification Number</string>
    <string name="driving_experience">Driving Experience ( in years)</string>
    <string name="feedback_validation">Please enter your feedback</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="required_for_this_app">Required for this App</string>
    <string name="enable_now">Enable Now</string>
    <string name="location_permission_not_granted">Location Permission not granted</string>
    <string name="select_car_type">Select Car Type</string>
    <string name="select_car_validation">Please select your car type</string>
    <string name="enter_license_number">Enter License Number</string>
    <string name="select_car_gear">Select Car Gear</string>
    <string name="files">Files</string>
    <string name="upload_front_image">Upload Front Image</string>
    <string name="upload_back_image">Upload Back Image</string>
    <string name="enter_id_number">Enter ID Number</string>
    <string name="select_id_proof">Select ID Proof</string>
    <string name="enter_id_proof_number">Enter ID Proof Number</string>
    <string name="dob">DOB</string>
    <string name="any_recommendation">Any Recommendation</string>
    <string name="upload_your_picture">Upload Your Picture</string>
    <string name="yyyy_mm_dd">YYYY-MM-DD</string>
    <string name="start_trip">Start trip</string>
    <string name="action_device_token">my.action.devicetoken</string>
    <string name="location_update">my.action.locationupdate</string>
    <string name="action_notification_foreground">my.action.notification_foreground</string>
    <string name="start_your_trip">Start your trip</string>
    <string name="end_your_trip">End your trip</string>
    <string name="add_review_message">your ride is completed ,do you want to give the ratings to the user</string>
    <string name="alert">Alert!</string>
    <string name="cancel_ride_msg">Do you want to cancel the ride</string>
    <string name="cancel_ride_notification">my.action.cancel_ride</string>
    <string name="total_earnings">Total Earnings</string>
    <string name="trip_earnings">Trip Earnings</string>
    <string name="tax">Tax</string>
    <string name="earning_details">Earning Details</string>
    <string name="driving_license_get_expired">Driving License get Expired</string>
    <string name="have_updated_his_her_personal_id">Have Updated his/her Personal ID</string>
    <string name="others">Others</string>
    <string name="tell_us_the_reason">tell us the reason</string>
    <string name="confirm_request">Confirm Request</string>
    <string name="logout_confirm">Are you sure you want to logout?</string>
    <string name="end_trip">End your Trip</string>

</resources>