<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/_10sdp"
    android:paddingBottom="@dimen/_10sdp"
    >

    <TextView
        android:id="@+id/tv_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:text="Reason for Document Changes?"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/_14ssp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/cv_dl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/driving_license_get_expired"
            android:textColor="@color/black" />

        <CheckBox
            android:id="@+id/cv_pi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/have_updated_his_her_personal_id"
            android:textColor="@color/black" />

        <CheckBox
            android:id="@+id/cv_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/others"
            android:textColor="@color/black" />

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_reason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:background="@drawable/drawable_grey_editext"
        android:ellipsize="end"
        android:fontFamily="@font/poppins"
        android:gravity="top"
        android:hint="@string/tell_us_the_reason"
        android:minHeight="@dimen/_50sdp"
        android:padding="@dimen/_10sdp"


        />

    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="@dimen/_30sdp"

        android:layout_marginTop="@dimen/_24sdp"
        android:background="@drawable/round_corner_button"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/confirm_request"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp" />


</androidx.appcompat.widget.LinearLayoutCompat>