<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:drawableRight="@drawable/ic_baseline_check_24"
        android:textColor="@color/black"
        android:drawableTint="#2FAF34"
        android:layout_marginTop="@dimen/_15sdp"
        android:textSize="@dimen/_12ssp"
        android:gravity="center_vertical"
        android:text="@string/driving_license"
        android:layout_height="wrap_content"/>
        <TextView
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:textSize="@dimen/_9ssp"
        android:gravity="center_vertical"
        android:text="Expires    dd/mm/yyyy"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:drawableRight="@drawable/ic_baseline_check_24"
        android:textColor="@color/black"
        android:drawableTint="#2FAF34"
        android:layout_marginTop="@dimen/_15sdp"
        android:textSize="@dimen/_12ssp"
        android:gravity="center_vertical"
        android:text="@string/personal_id"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:drawableRight="@drawable/ic_baseline_check_24"
        android:textColor="@color/black"
        android:drawableTint="#2FAF34"
        android:layout_marginTop="@dimen/_15sdp"
        android:textSize="@dimen/_12ssp"
        android:gravity="center_vertical"
        android:text="@string/health_report"
        android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <TextView
        android:layout_width="match_parent"
        android:textColor="@color/appColor"
       android:layout_centerHorizontal="true"
        android:paddingVertical="@dimen/_2sdp"
        android:layout_alignParentBottom="true"
        android:layout_marginVertical="@dimen/_25sdp"
        android:textSize="@dimen/_13ssp"
        android:gravity="center"
        android:text="@string/request_document_change"
        android:layout_height="wrap_content"/>
</RelativeLayout>