<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        app:cardCornerRadius="@dimen/_20sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_20sdp"
            android:paddingTop="@dimen/_20sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:paddingBottom="@dimen/_20sdp">

            <TextView
                android:id="@+id/tv_alert_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/cancel_request"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"


                />

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_alert_header"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/cancellation_charge_will_be_deducted_from_your_account_with_respect_to_out_cancellation_policy"
                android:textSize="@dimen/_14ssp"

                />


            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_below="@+id/tv_desc"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/round_corner_button"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/cancel_trip"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />


        </RelativeLayout>


    </com.google.android.material.card.MaterialCardView>


</LinearLayout>