<?xml version="1.0" encoding="utf-8"?>


<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/top_lyt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp">

            <ImageView
                android:id="@+id/bck_btn_header"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/logo_icon" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:fontFamily="@font/poppins"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:text="@string/driving_license"
                android:textColor="@color/appColor"
                android:textSize="@dimen/_12ssp" />


            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:visibility="invisible" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/poppins"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:text="Driving License Number"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />

        <EditText
            android:id="@+id/et_license_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:minHeight="@dimen/_35sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:background="@drawable/grey_box"
            android:hint="@string/enter_license_number"
            android:paddingStart="@dimen/_5sdp"
            android:fontFamily="@font/poppins"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/poppins"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:text="@string/select_car_gear"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />


        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_gear"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:background="@drawable/grey_box"
            android:paddingStart="@dimen/_5sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:spinnerMode="dropdown"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:text="select gear"
            android:textColor="@color/appColor"
            android:textSize="@dimen/_12ssp"

            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:text="@string/select_car_type"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />


        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_car"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:background="@drawable/grey_box"
            android:paddingStart="@dimen/_5sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:spinnerMode="dropdown"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:text="select gear"
            android:textColor="@color/appColor"
            android:textSize="@dimen/_12ssp"

            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:text="@string/files"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="@dimen/_110sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/dashed_line_box"
            android:orientation="horizontal"
            android:padding="@dimen/_5sdp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginVertical="@dimen/_20sdp"
                android:layout_weight="1"
                android:padding="@dimen/_4sdp"
                android:fontFamily="@font/poppins"
                android:text="@string/upload_front_image"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/iv_front_upload"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_10sdp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/placeholder_image"
                android:text="Image"
                android:textColor="@color/black" />
        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear_backside"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_110sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/dashed_line_box"
            android:orientation="horizontal"
            android:padding="@dimen/_5sdp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginVertical="@dimen/_20sdp"
                android:layout_weight="1"
                android:padding="@dimen/_4sdp"
                android:fontFamily="@font/poppins"
                android:text="@string/upload_back_image"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/iv_back_upload"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_10sdp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/placeholder_image"
                android:text="Image"
                android:textColor="@color/black" />
        </androidx.appcompat.widget.LinearLayoutCompat>


        <TextView
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@drawable/round_corner_button"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:onClick="onClick"
            android:paddingVertical="3dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>