<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.map.DriverMapActivityScreen">


    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/white"
        android:paddingHorizontal="@dimen/_15sdp"
        app:theme="@style/ThemeOverlay.AppCompat.Light">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:onClick="onClick"
            android:src="@drawable/dummy_profile_one" />


        <com.wizebrain.adebdriver.utils.custom.SwipeableButton
            android:id="@+id/swipe_button"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_centerInParent="true"
            app:durationAnimation="250"
            app:isClickToSwipeEnable="false"
            app:textChecked="@string/online"
            app:textSize="8sp"
            app:textUnchecked="@string/offline"
            app:thresholdEnd="0.3"
            app:thresholdStart="0.7" />

        <FrameLayout
            android:id="@+id/frame_notification"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:onClick="onClick"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_notification" />

            <TextView
                android:layout_width="@dimen/_8sdp"
                android:layout_height="@dimen/_8sdp"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:background="@drawable/red_dot_drawable" />
        </FrameLayout>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/frame_online"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:visibility="visible">

        <com.google.android.gms.maps.MapView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_10sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_open_fragment"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="15dp"
            android:textSize="16sp"
            android:textColor="@color/blue"
            android:fontFamily="@font/poppins_medium"
            android:elevation="5dp"
            android:visibility="gone"
            android:drawablePadding="@dimen/_20sdp"
            android:drawableTint="@color/blue"
            android:drawableStart="@drawable/ic_arrow_down"
            android:gravity="center_vertical"
            android:text="@string/choose_your_car_and_gear_type"
            android:background="@drawable/drawable_upper_white_curve"
            android:layout_alignParentBottom="true"/>



        <FrameLayout
            android:id="@+id/frame_container_request"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:padding="@dimen/_10sdp"
            android:visibility="gone" />

        <FrameLayout
            android:id="@+id/frame_ride_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/_10sdp"
            android:paddingStart="@dimen/_5sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingEnd="@dimen/_5sdp" />


    </RelativeLayout>


</RelativeLayout>